aks/ingress_controller_ngnix/ingress/ingress-http-app-routing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-helloworld
  annotations:
    kubernetes.io/ingress.class:addon-http-application-routing
  spec:
    rules:
    - host: aks-helloworld.<CLUSTER_SPECIFIC_DNS_ZONE>
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: aks-helloworld
              port:
                number: 80
